[package]
name = "project-color-card"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "^0.23"
bevy_asset_loader = "0.20.1"
bevy_rand = { version = "0.5.2", features = ["wyrand"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
